Cleanup research files and update documentation

--- a/docs/releases/v1.1.0.md
+++ b/docs/releases/v1.1.0.md
@@ -132,8 +132,7 @@ console.log(result.verified); // true
 - **Python SDK:** https://pypi.org/project/qwed/
 - **Whitepaper:** https://doi.org/10.5281/zenodo.18110785
 - **Documentation:** https://docs.qwedai.com
-- **JOSS Paper:** https://joss.theoj.org/papers/385abbd3a6733fc907f1780eb5b6c927
-
+- **Documentation:** https://docs.qwedai.com
 ---
 
 ## 🙏 Contributors
@@ -150,7 +149,6 @@ Apache 2.0
 
 ## 🎯 What's Next?
 
-- JOSS peer review submission
 - Go SDK official release (pkg.go.dev)
 - Rust SDK on crates.io
 - Additional language support
